--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "bulid": "webpack"
+  },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.14.8",
@@ -6,6 +9,10 @@
     "@babel/plugin-transform-block-scoping": "^7.14.5",
     "@babel/plugin-transform-strict-mode": "^7.14.5",
     "@babel/preset-env": "^7.14.8",
-    "babel-loader": "^8.2.2"
+    "babel-loader": "^8.2.2",
+    "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "core-js": "^2.6.12"
   }
 }
